@@ -1,5 +1,6 @@
 From ucommon 2.0.3 to 2.0.4
 - fixed bug in reusable object handoff to free list.
+- basic dccp socket support added.
 
 From ucommon 2.0.2 to 2.0.3
 - documented behavior and use case for ...Thread::exit() methods changed.
